Add Spotless, Enforcer, and SpotBugs quality gates (#6)
* Add Spotless, Enforcer, and SpotBugs quality gates to the build: Spotless enforces google-java-format at verify with the full reformat applied across main and test sources, Enforcer requires Maven 3.8+ and JDK 17+ and bans duplicate pom dependency versions, and SpotBugs runs at max effort failing the build on findings, with AclPolicy switched from Collections.unmodifiableMap to the genuinely immutable Map.copyOf and its remaining record-accessor EI_EXPOSE_REP false positive suppressed with justification in spotbugs-exclude.xml; .mvn/jvm.config supplies the add-exports flags google-java-format needs on JDK 17+

* Address review: scope the AclPolicy EI_EXPOSE_REP suppression to the userRules and groupRules accessor methods so future exposure elsewhere still fails the build, bump to current plugin releases Spotless 3.8.0, SpotBugs 4.10.3.0, and Enforcer 3.6.3, and add forbidWildcardImports since google-java-format does not prohibit them itself